fixed navbar spacing and footer icon sizing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@ nav {
     font-family: 'Permanent Marker', cursive;
     font-size: 60px;
     color: white;
+    margin-bottom: 150px;
 }
 
 .navbar-brand:hover {
@@ -41,7 +42,7 @@ nav {
 #castle {
     position: absolute;
     max-height: 200px;
-    bottom: -25px;
+    bottom: -30px;
     z-index: 1;
 }
 
@@ -77,8 +78,8 @@ p {
 }
 
 .logo {
-    max-width: 100px;
-    max-height: 100px;
+    max-width: 75px;
+    max-height: 75px;
 }
 
 @media only screen and (min-width: 1200px) {
